--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,6 +19,41 @@
     opacity: 1;
     transform: translateY(0);
   }
+
+  .dynamic-rainbow {
+    background: linear-gradient(
+      -45deg,
+      hsl(300, 100%, 50%),
+      hsl(60, 50%, 50%),
+      hsl(160, 50%, 50%),
+      hsl(300, 50%, 50%),
+      hsl(60, 50%, 50%),
+      hsl(160, 50%, 50%),
+      hsl(300, 50%, 50%),
+      hsl(60, 50%, 50%),
+      hsl(160, 50%, 50%),
+      hsl(300, 100%, 50%)
+    );
+    background-size: 800% 800%;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    animation: move-background 30s linear infinite;
+  }
+
+  @keyframes move-background {
+    0% {
+      background-position: 0% 50%;
+    }
+
+    50% {
+      background-position: 100% 50%;
+    }
+
+    100% {
+      background-position: 0% 50%;
+    }
+  }
 }
 
 @theme {
