--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,5 @@
 @import 'tailwindcss';
-/* @import "tailwind-animate"; */
+@import './animations.css';
 
 @layer {
   :root {
@@ -74,44 +74,4 @@
 
 @utility scrollbar-thin {
   scrollbar-width: thin;
-}
-
-@theme {
-  --animate-fade-in: fade-in 100ms ease-in-out forwards;
-
-  @keyframes fade-in {
-    0% {
-      opacity: 0;
-      transform: scale(0.95);
-    }
-    100% {
-      opacity: 1;
-      transform: scale(1);
-    }
-  }
-
-  --animate-fade-out: fade-out 100ms ease-in-out forwards;
-
-  @keyframes fade-out {
-    0% {
-      opacity: 1;
-      transform: scale(1);
-    }
-    100% {
-      opacity: 0;
-      transform: scale(0.95);
-    }
-  }
-}
-
-@utility animation-duration-150 {
-  animation-duration: 150ms;
-}
-
-@utility animation-duration-200 {
-  animation-duration: 200ms;
-}
-
-@utility animation-duration-250 {
-  animation-duration: 250ms;
 }
